manifests/nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-external
spec:
  selector:
    app: sts-web
  ports:
  - port: 80
    name: web
  clusterIP: 10.32.0.222

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bramsingress
  # namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-external
          servicePort: 80
